--- a/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
@@ -7,16 +7,14 @@
              xmlns:ObjetoValor="clr-namespace:Dominio.ObjetoValor;assembly=CFP.Dominio" 
              mc:Ignorable="d" 
              d:DesignWidth="800" 
-             Height="600" 
-             Loaded="UserControl_Loaded">
-
-    <Grid >
+             d:DesignHeight="550"
+             Loaded="UserControl_Loaded" >
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
-            <RowDefinition Height="530"/>
-
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="#FF1F3D68">
+        <Grid Grid.Row="0" Background="#FF1F3D68" >
             <Button x:Name="btPesquisar" 
                     Margin="10,2,0,8" 
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
@@ -83,16 +81,26 @@
             </Button>
         </Grid>
         <Grid x:Name="GridCampos" Background="LightGray" Grid.Row="1" >
-            <TextBlock x:Name="lblNomeTela" Text="Forma de Pagamento" 
-                       HorizontalAlignment="Left" 
+            <TextBlock x:Name="lblNomeTela" 
+                       Text="Forma de Pagamento" 
+                       HorizontalAlignment="Stretch" 
                        VerticalAlignment="Top" 
                        FontSize="12"
                       Foreground="#FF1F3D68"
                        Margin="5,5,0,0"/>
-            <Grid x:Name="GridControls" Margin="70">
-
+            <Grid x:Name="GridControls" Margin="40">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
                 <TextBox
                     x:Name="txtNome"
+                    Grid.Row="0"
                      materialDesign:HintAssist.Hint="Nome"
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
@@ -101,52 +109,57 @@
                      VerticalAlignment="Top"
                      MaxLength="70" TabIndex="1">
                 </TextBox>
-              
                 <TextBox  
                     x:Name="txtQtdParcelas"
+                    Grid.Row="1"
                      materialDesign:HintAssist.Hint="Qtd Parcelas" 
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,54,0,274" PreviewTextInput="txtQtdParcelas_PreviewTextInput" PreviewKeyDown="txtQtdParcelas_PreviewKeyDown"  
+                     Foreground="#FF1F3D68"
+                    PreviewTextInput="txtQtdParcelas_PreviewTextInput" 
+                    PreviewKeyDown="txtQtdParcelas_PreviewKeyDown"  
                      MaxLength="3" TabIndex="2"
                     />
                 <TextBox 
                     x:Name="txtDiasVencimento"
+                    Grid.Row="2"
                      materialDesign:HintAssist.Hint="Dias para Vencimento" 
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,121,0,206.6" PreviewTextInput="txtDiasVencimento_PreviewTextInput" PreviewKeyDown="txtDiasVencimento_PreviewKeyDown"  
+                     Foreground="#FF1F3D68"
+                    PreviewTextInput="txtDiasVencimento_PreviewTextInput" PreviewKeyDown="txtDiasVencimento_PreviewKeyDown"  
                      MaxLength="3" TabIndex="3"
                     />
                 <ComboBox 
                     x:Name="cmbSituacao"
+                    Grid.Row="3"
                      materialDesign:HintAssist.Hint="Situação" 
                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,188,0,148" TabIndex="4">
+                     Foreground="#FF1F3D68" 
+                    TabIndex="4">
                 </ComboBox>
-
                 <CheckBox x:Name="chkTransacaoBancaria" 
+                          Grid.Row="4"
                           Content="Realiza Transações Bancárias?"
                           FontFamily="Champagne &amp; Limousines" 
                                 FontSize="22"  
                                 Foreground="#FF1F3D68"
-                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" Margin="0,77,0,-76.4">
+                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" >
 
                 </CheckBox>
-                
                 <CheckBox x:Name="chkUsadoParaCompras" 
+                          Grid.Row="5"
                           Content="Possui Fatura Mensal?"
                           FontFamily="Champagne &amp; Limousines" 
                                 FontSize="22"  
                                 Foreground="#FF1F3D68"
-                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" Margin="0,293,0,65">
+                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" >
 
                 </CheckBox>
-                
             </Grid>
 
 
