--- a/CFP.App/Formularios/Cadastros/UserControlTipoRenda.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlTipoRenda.xaml
@@ -10,7 +10,7 @@
     <Grid  >
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
-            <RowDefinition Height="530"/>
+            <RowDefinition Height="*"/>
 
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#FF1F3D68">
@@ -69,16 +69,22 @@
                     Height="50"/>
             </Button>
         </Grid>
-        <Grid x:Name="GridCampos" Background="LightGray" Margin="0,70,0,0" Grid.RowSpan="2" >
+        <Grid x:Name="GridCampos" Background="LightGray" Grid.Row="1" >
             <TextBlock x:Name="lblNomeTela" Text="Tipo de Renda" 
                        HorizontalAlignment="Left" 
                        VerticalAlignment="Top" 
                        FontSize="12"
                       Foreground="#FF1F3D68"
                        Margin="5,5,0,0"/>
-            <Grid x:Name="GridControls" Margin="70,70,60,65">
-                <TextBox
-                    x:Name="txtNome"
+            <Grid x:Name="GridControls" Margin="60">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBox 
+                     x:Name="txtNome"
+                     Grid.Row="0"
                      materialDesign:HintAssist.Hint="Nome" 
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
@@ -87,13 +93,13 @@
                      VerticalAlignment="Top"/>
 
                 <ComboBox 
-                    x:Name="cmbSituacao"
+                     x:Name="cmbSituacao"
+                     Grid.Row="1"
                      materialDesign:HintAssist.Hint="Situação" 
                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,59,0,277"  
-                     />
+                     Foreground="#FF1F3D68"/>
             </Grid>
         </Grid>
     </Grid>
