--- a/CFP.App/Formularios/Financeiros/UserControlContas.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlContas.xaml
@@ -7,11 +7,11 @@
              xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="800" Loaded="UserControl_Loaded">
+             d:DesignHeight="550" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid  >
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
-            <RowDefinition Height="530"/>
+            <RowDefinition Height="*"/>
 
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#FF1F3D68">
@@ -87,7 +87,7 @@
                     Height="50"/>
             </Button>
         </Grid>
-        <Grid x:Name="GridCampos" Background="LightGray" Margin="0,70,0,62" Grid.RowSpan="2" >
+        <Grid x:Name="GridCampos" Background="LightGray" Margin="0,70,0,0" Grid.RowSpan="2" >
             <TextBlock x:Name="lblNomeTela" Text="Conta" 
                        HorizontalAlignment="Left" 
                        VerticalAlignment="Top" 
@@ -101,17 +101,16 @@
                       Foreground="#FF1F3D68"
                        Margin="0,5,5,0"/>
             <Grid x:Name="GridControls" Margin="30,25,30,25" >
-                <TabControl x:Name="tabContas" Margin="0,0,0,-20">
+                <TabControl x:Name="tabContas" Margin="0,0,0,0">
                     <TabItem x:Name="tabItemGeral" Header="Geral">
                         <Grid x:Name="GridControls2" Margin="150 20 150 20">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="45"/>
+                                <RowDefinition Height="45"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             <TextBox
