Opcao de envio para cofre na tela de ref pessoa no caixa, posso optar em enviar para cofre e em seguida ja retirar do mesmo e colocar como entrada no caixa. Concluido e testado

--- a/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
@@ -318,6 +318,7 @@
                                 <ContextMenu>
                                     <MenuItem x:Name="MenuItemAddTudoCaixa" Header="Adicionar todos ao caixa" Click="MenuItemAddTudoCaixa_Click"/>
                                     <MenuItem x:Name="MenuItemAddItemSelecionado" Header="Adicionar items selecionados ao caixa" Click="MenuItemAddItemSelecionado_Click"/>
+                                    <MenuItem x:Name="MenuItemAddTudoCofre" Header="Adicionar todos ao cofre" Click="MenuItemAddTudoCofre_Click"/>
                                     <MenuItem x:Name="MenuItemAddItemSelecionadoCofre" Header="Adicionar items selecionados ao cofre" Click="MenuItemAddItemSelecionadoCofre_Click" />
                                 </ContextMenu>
                             </DataGrid.ContextMenu>
