--- a/CFP.App/Formularios/Principais/UserControlConfiguracoes.xaml
+++ b/CFP.App/Formularios/Principais/UserControlConfiguracoes.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
-            <RowDefinition Height="500"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid x:Name="GridCabecalho" Grid.Row="0" Background="#FF1F3D68">
             <Grid.ColumnDefinitions>
@@ -103,13 +103,16 @@
                           FontSize="15" 
                           Foreground="#FF1F3D68"
                           Style="{StaticResource MaterialDesignGroupBox}"
-                          Background="Transparent">
+                          Background="Transparent"
+                              Grid.RowSpan="2">
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-
+                                <RowDefinition Height="40"/>
+                                <RowDefinition Height="40"/>
+                                <RowDefinition Height="40"/>
+                                <RowDefinition Height="40"/>
+                                <RowDefinition Height="40"/>
+                                <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
                             <Grid x:Name="Row1" Grid.Row="0">
@@ -129,8 +132,8 @@
 
                                 <Button x:Name="btPesquisaCaminhoArquivos"
                                     Grid.Column="1"
-                                    Width="40" 
-                                    Height="40"
+                                    Width="30" 
+                                    Height="30"
                                     Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
                                     Background="#FF1F3D68"
                                     BorderBrush="#FF1F3D68"
@@ -139,8 +142,8 @@
                                     Click="btPesquisaCaminhoArquivos_Click">
                                     <materialDesign:PackIcon 
                                         Kind="Search"  
-                                        Width="30" 
-                                        Height="30"/>
+                                        Width="20" 
+                                        Height="20"/>
                                 </Button>
                             </Grid>
 
@@ -161,8 +164,8 @@
 
                                 <Button x:Name="btPesquisaCaminhoBackup"
                                     Grid.Column="1"
-                                    Width="40" 
-                                    Height="40"
+                                    Width="30" 
+                                    Height="30"
                                     Style="{StaticResource MaterialDesignFloatingActionAccentButton}"
                                     Background="#FF1F3D68"
                                     BorderBrush="#FF1F3D68"
@@ -171,8 +174,8 @@
                                     Click="btPesquisaCaminhoBackup_Click" >
                                     <materialDesign:PackIcon 
                                         Kind="Search"  
-                                        Width="30" 
-                                        Height="30"/>
+                                        Width="20" 
+                                        Height="20"/>
                                 </Button>
                             </Grid>
                             <Grid x:Name="Row3" Grid.Row="2">
@@ -199,14 +202,35 @@
                                      Margin="0"
                                      Text="5" PreviewTextInput="txtQtdDiasAlertaVencimento_PreviewTextInput" PreviewKeyDown="txtQtdDiasAlertaVencimento_PreviewKeyDown"/>
                             </Grid>
-                            
+                            <Grid x:Name="Row4" Grid.Row="3">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="150"/>
+                                </Grid.ColumnDefinitions>
+                                <ComboBox x:Name="cmbTransacaoBancariaPadrao"    
+                                      Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                                      materialDesign:HintAssist.Hint="Transações Bancária Padrão"
+                                      FontFamily="Champagne &amp; Limousines"
+                                      FontSize="15" 
+                                      VerticalAlignment="Stretch"/>
+                               
+                            </Grid>
                         </Grid>
 
                     </GroupBox>
 
+                   
+                </Grid>
+
+
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
                     <GroupBox x:Name="GroupBancoDados"
                           Margin="5"
-                              Grid.Row="1"
+                              Grid.Row="0"
                           Header="Banco de Dados"
                           FontFamily="Champagne &amp; Limousines" 
                           FontSize="15" 
@@ -251,15 +275,7 @@
                             </Button>
                         </Grid>
                     </GroupBox>
-                </Grid>
-
-
-                <Grid Grid.Column="1">
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <GroupBox x:Name="semNome2"
+                    <!--<GroupBox x:Name="Sistema"
                           Margin="5"
                           Grid.Row="0"
                           Header="Sem nome"
@@ -268,8 +284,8 @@
                           Foreground="#FF1F3D68"
                           Style="{StaticResource MaterialDesignGroupBox}"
                           Background="Transparent">
-
-                    </GroupBox>
+                        
+                    </GroupBox>-->
                     <GroupBox x:Name="semNome"
                           Margin="5"
                           Grid.Row="1"
