--- a/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
@@ -306,7 +306,9 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="40"/>
                         </Grid.RowDefinitions>
-                        <DataGrid x:Name="DataGridAReceber" Grid.Row="0" AutoGenerateColumns="False" IsReadOnly="True">
+                        <DataGrid x:Name="DataGridAReceber" Grid.Row="0" 
+                                  AutoGenerateColumns="False" 
+                                  IsReadOnly="True" >
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="Tipo" Binding="{Binding Conta.TipoConta}" />
                                 <DataGridTextColumn Header="Valor" Binding="{Binding ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
