--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmaEntradaSaidaRefPessoa.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmaEntradaSaidaRefPessoa.xaml
@@ -10,7 +10,7 @@
         Title="ConfirmaEntradaSaidaRefPessoa" 
         Height="200" Width="350" 
         WindowStartupLocation="CenterScreen"
-        WindowStyle="None">
+        WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" >
     <Grid >
         <Grid>
             <Grid.RowDefinitions>
