--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
@@ -78,7 +78,7 @@
                              FontFamily="Champagne &amp; Limousines" 
                              FontSize="18"
                              Foreground="#FF1F3D68"
-                             VerticalAlignment="Center"/>
+                             VerticalAlignment="Center" LostFocus="txtValorParcela_LostFocus"/>
                     </Grid>
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
@@ -239,10 +239,10 @@
                                 Height="50" Width="50" 
                                 Background="#FF1F3D68" 
                                 HorizontalAlignment="Center" 
-                                VerticalAlignment="Center"
+                                VerticalAlignment="Top"
                                 BorderBrush="#FF1F3D68" 
                                 Click="btConfirmar_Click" 
-                                TabIndex="7" >
+                                TabIndex="7" Margin="1,0,0.2,-0.4" >
                             <materialDesign:PackIcon 
                                  Kind="Check"  
                                  Width="50" 
