--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/ConfirmacaoPagamentoParcela.xaml
@@ -78,7 +78,7 @@
                              FontFamily="Champagne &amp; Limousines" 
                              FontSize="18"
                              Foreground="#FF1F3D68"
-                             VerticalAlignment="Center" LostFocus="txtValorParcela_LostFocus"/>
+                             VerticalAlignment="Center" LostFocus="txtValorParcela_LostFocus" TextChanged="txtValorParcela_TextChanged"/>
                     </Grid>
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
@@ -122,7 +122,7 @@
                             LostFocus="txtJurosPorcentagem_LostFocus" 
                             TabIndex="1" 
                             PreviewTextInput="txtJurosPorcentagem_PreviewTextInput" 
-                            PreviewKeyDown="txtJurosPorcentagem_PreviewKeyDown"/>
+                            PreviewKeyDown="txtJurosPorcentagem_PreviewKeyDown" TextChanged="txtJurosPorcentagem_TextChanged"/>
                         <TextBox
                             x:Name="txtJurosValor"
                             Grid.Column="1"
@@ -135,7 +135,7 @@
                             LostFocus="txtJurosValor_LostFocus"
                             TabIndex="2" 
                             PreviewTextInput="txtJurosValor_PreviewTextInput"
-                            PreviewKeyDown="txtJurosValor_PreviewKeyDown"/>
+                            PreviewKeyDown="txtJurosValor_PreviewKeyDown" TextChanged="txtJurosValor_TextChanged"/>
                     </Grid>
                     <Grid Grid.Row="3">
                         <Grid.ColumnDefinitions>
@@ -154,7 +154,7 @@
                             LostFocus="txtDescontoPorcentagem_LostFocus" 
                             TabIndex="3"
                             PreviewTextInput="txtDescontoPorcentagem_PreviewTextInput" 
-                            PreviewKeyDown="txtDescontoPorcentagem_PreviewKeyDown"/>
+                            PreviewKeyDown="txtDescontoPorcentagem_PreviewKeyDown" TextChanged="txtDescontoPorcentagem_TextChanged"/>
                         <TextBox
                              x:Name="txtDescontoValor"
                              Grid.Column="1"
@@ -167,7 +167,7 @@
                             LostFocus="txtDescontoValor_LostFocus"
                             TabIndex="4"
                             PreviewTextInput="txtDescontoValor_PreviewTextInput"
-                            PreviewKeyDown="txtDescontoValor_PreviewKeyDown"/>
+                            PreviewKeyDown="txtDescontoValor_PreviewKeyDown" TextChanged="txtDescontoValor_TextChanged"/>
                     </Grid>
                     <Grid Grid.Row="4">
                         <Grid.ColumnDefinitions>
@@ -196,7 +196,7 @@
                             KeyDown="txtValorPago_KeyDown" 
                             TabIndex="5" 
                             PreviewTextInput="txtValorPago_PreviewTextInput" 
-                            PreviewKeyDown="txtValorPago_PreviewKeyDown"/>
+                            PreviewKeyDown="txtValorPago_PreviewKeyDown" TextChanged="txtValorPago_TextChanged"/>
                     </Grid>
                     <Grid Grid.Row="5">
                         <Grid.ColumnDefinitions>
