--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/EntradaSaidaManual.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/EntradaSaidaManual.xaml
@@ -55,7 +55,7 @@
                   HorizontalAlignment="Stretch" 
                   PreviewTextInput="txtValorInicial_PreviewTextInput" 
                   PreviewKeyDown="txtValorInicial_PreviewKeyDown"
-                  Margin="20 0 20 0" TabIndex="0"/>
+                  Margin="20 0 20 0" TabIndex="0" TextChanged="txtValorInicial_TextChanged"/>
 
                 <Button x:Name="btConfirmar"
                     Grid.Column="1"
